--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.1.7",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "sass": "^1.85.0",
     "scss": "^0.2.4",
