--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "nextjs-toploader": "^3.7.15",
