--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "nextjs-toploader": "^3.7.15",
