--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.7",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
