--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "next": "15.1.7",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
